k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: review-ingress
  namespace: review-k8s
spec:
  ingressClassName: nginx
  rules:
    - host: review.local
      http:
        paths:

          # ✅ static 먼저 선언 (중요)
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 8000

          # Django 메인 웹
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 8000

          # FastAPI 문서
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 8001

          # FastAPI 추천 API
          - path: /api/v1/recommend
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 8001
